--- a/Tugas_Proyek_1.html
+++ b/Tugas_Proyek_1.html
@@ -5,6 +5,7 @@
     <br>
     <h3>
         Primo Afga Parlevi  2041720021
+        Farrel Muhammad Raihan Akhdan 2041720243
     </h3>
     <br>
 </html>
