--- a/Tugas_Proyek_1.html
+++ b/Tugas_Proyek_1.html
@@ -4,8 +4,6 @@
     </h1>
     <br>
     <h3>
-        Primo Afga Parlevi  2041720021
-        Farrel Muhammad Raihan Akhdan 2041720243
+        20  Primo Afga Parlevi  2041720021
     </h3>
-    <br>
 </html>
