--- a/Tugas_Proyek_1.html
+++ b/Tugas_Proyek_1.html
@@ -4,6 +4,7 @@
     </h1>
     <br>
     <h3>
+        07  Farrel Muhammad R A 2041720243
         20  Primo Afga Parlevi  2041720021
     </h3>
 </html>
